--- a/requirements.txt
+++ b/requirements.txt
@@ -86,6 +86,7 @@ pycparser==2.21
 pycryptodome==3.18.0
 pydantic==2.3.0
 pydantic_core==2.6.3
+pydub==0.25.1
 Pygments==2.17.1
 pygsheets==2.0.6
 PyJWT==2.8.0
@@ -107,7 +108,7 @@ requests-oauthlib==1.3.1
 rfc3986==1.5.0
 rich==13.7.0
 rich-click==1.6.1
-robotframework==5.0
+robotframework==7.1.1
 robotframework-appiumlibrary==1.6.3
 robotframework-databaselibrary==1.2.4
 robotframework-pythonlibcore==3.0.0
