--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: dragon-boat-new
-    env: python
+    runtime: python
     buildCommand: "pip install -r requirements.txt"
     startCommand: "sh startup.sh"
     plan: free
